Fixed width issue, and fixed the button sizes, on mobile

--- a/src/components/ui/Card.css
+++ b/src/components/ui/Card.css
@@ -37,6 +37,7 @@
     flex-direction: column;
     justify-content: center;
 
+
     width: 800px;
     max-height: 70vh;
 
@@ -70,7 +71,8 @@
         display: flex;
         flex-direction: column-reverse;
         height: unset;
-        min-width: 100vw;
+
+        width: 100vw;
     
         .card {
             margin: 0;
