--- a/src/styles/slumper.css
+++ b/src/styles/slumper.css
@@ -45,7 +45,7 @@ html{
 
 body{
     min-height: 100vh;
-    width: 100%;
+    min-width: 100vw;
 
     margin: 0 auto;
     
@@ -220,7 +220,7 @@ button, select, option, input:not([type=checkbox]), label{
         margin: 0;
         padding: 0;
 
-        font-size: .8em;
+        font-size: .7em;
         line-height: 200%;
         color: var(--text-color);
 
